:hammer: Added more JVM options. Fixes #100